--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "webpack serve",
@@ -29,8 +30,7 @@
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "gh-pages": "^3.2.3"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "js-datepicker": "^5.18.0"
