Add script for heroku in package.json

--- a/package.json
+++ b/package.json
@@ -21,16 +21,14 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "gh-pages": "^3.2.3"
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "start": "webpack serve",
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "heroku-postbuild": "webpack -p"
   },
   "dependencies": {
     "js-datepicker": "^5.18.0"
