--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/turingschool-examples/webpack-starter-kit.git"
+    "url": "git+https://github.com/beizy/white-lotus.git"
   },
+  "homepage": "http://beizy/white-lotus",
   "author": "Turing School of Software and Design",
   "license": "MIT",
   "devDependencies": {
@@ -21,14 +22,16 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "webpack serve",
     "build": "webpack",
     "test": "mochapack 'test/**/*.js'",
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'",
-    "heroku-postbuild": "webpack -p"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "js-datepicker": "^5.18.0"
